--- a/manifest.json
+++ b/manifest.json
@@ -21,5 +21,8 @@
     "background": {
         "service_worker": "background.js"
     },
-    "permissions": ["activeTab", "scripting"]
+    "permissions": ["scripting"],
+    "host_permissions": [
+        "https://chat.openai.com/"
+    ]
 }
