--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
     "manifest_version": 3,
     "name": "ChatGPT Screenshot Ex",
-    "description": "Make a screenshot of ChatGPT conversation.",
-    "version": "1.5.2",
+    "description": "__MSG_description__",
+    "default_locale": "en",
+    "version": "2.1.0",
     "homepage_url": "https://github.com/it9gamelog/chatgpt-screenshot-ex",
     "icons": {
         "16": "images/icon-16.png",
